--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,1 +1,10 @@
 %h1 ini halaman index
+
+- @articles.each do |article|
+  %h2= article.title
+  %p
+    Published at
+    = article.created_at.strftime('%b, %d, %y')
+  %p= truncate(article.content, length: 200)
+
+= link_to "New Article", new_article_path
