--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,11 +1,6 @@
-%h1 ini halaman index
-
 - @articles.each do |article|
-  %h2= article.title
-  %p
-    Published at
-    = article.created_at.strftime('%b, %d, %y')
-  %p= truncate(article.content, length: 200)
-
-- if user_signed_in?
-  = link_to "New Article", new_article_path
+	%h2= link_to article.title, article
+	%p
+		Published at
+		= article.created_at.strftime('%b %d, %Y')
+	%p= truncate(article.content, length: 200)
